Bug 257715 - [WGSL] GlobalRewriter reads and defs shouldn't leak between callees
Summary: [WGSL] GlobalRewriter reads and defs shouldn't leak between callees
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-06-05 08:51 PDT by Tadeu Zagallo
Modified: 2023-06-06 23:57 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2023-06-05 08:51:49 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-06-05 08:52:39 PDT
<rdar://problem/110264659>
Comment 2 Tadeu Zagallo 2023-06-05 09:00:51 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14670
Comment 3 EWS 2023-06-06 23:57:07 PDT
Committed 264927@main (7687bb2974f4): <https://commits.webkit.org/264927@main>

Reviewed commits have been landed. Closing PR #14670 and removing active labels.